# invoice-processing

./: .example.env  .gitignore  README.md  main.py  pyproject.toml
apps/: ai_request.py  ai_to_json.py  classify.py  insert.py  invoice.py  invoice_inserter.py  invoice_pdf_to_json.py  iterate.py  json_to_sqlite.py  main.py  parser.py  pdf_invoice_to_sqlite.py  read_db.py  test_pdf_to_text.py  utils.py  validation.py
data/: invoice.json
data/json_results/: DoclingMarkdown.json  PyPDF2.json
output/: DoclingMarkdown.md  DoclingStructure.json  Fitz.txt  Pdfplumber.txt  PyPDF2.txt
pdftotext/: PyPDF2.txt  docling.txt  fitz.txt  pdf_to_text.py  pdf_to_text_utils.py  pdfplumber.txt  test_fitz.py  test_pdfplumber.py
project/: batch_process_invoices.py  batch_process_shipping_lists.py  compare.py  folder_to_db.py  invoice_processing.py  main.py  read_db.py  read_invoices_db.py  read_shipping_db.py  shipping_list_processing.py  test_db_schema.py  utils.py
response/: gpt5_nano.py  instructions.py  openai_response.py  openrouter_response.py  pdf_to_json.py  pdf_to_json_pydantic.py  pydantic_example.py  structured_output.py  web_search.py
